--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,31 @@
 body {
     background-color: #F5F5DC;
 }
+label {
+    font-family: Oswald;
+    color: #00FFF;
+}
+.title {
+    font-size: 40px;
+    text-align: center;
+    font-family: Oswald;
+    color: #FF8DC;
+}
+.box {
+    background-color: #7FFFD4;
+    margin: auto;
+    width: 50%;
+    text-align: center;
+    padding: 22px;
+    height: 20%;
+    width: 370px;
+    border-radius: 10px;
+}
+@media only screen and (max-width: 480px) {
+    .title {
+        font-size: 32px;
+    }
+    form {
+        max-width: 100%;
+      }
+}
