--- a/css/screen.css
+++ b/css/screen.css
@@ -3,13 +3,13 @@ body {
 }
 label {
     font-family: Oswald;
-    color: #00FFF;
+    color: #00FFFF;
 }
 .title {
     font-size: 40px;
     text-align: center;
     font-family: Oswald;
-    color: #FF8DC;
+    color: #FFF8DC;
 }
 .box {
     background-color: #7FFFD4;
